log
vie.,  5 de may. de 2023 11:27:59: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|5
total_score: 0/70
664c7ed
vie.,  5 de may. de 2023 11:29:11: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4cec36c
vie.,  5 de may. de 2023 12:02:11: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4643a8b
vie.,  5 de may. de 2023 12:03:06: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
9bae182
vie.,  5 de may. de 2023 12:03:33: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
08dc9a6
vie.,  5 de may. de 2023 12:04:24: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3e81c48
vie.,  5 de may. de 2023 12:30:33: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  2|4
total_score: 15/70
a45fda6
vie.,  5 de may. de 2023 12:31:12: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
a47cc08
vie.,  5 de may. de 2023 12:32:58: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
d145d36
vie.,  5 de may. de 2023 12:35:24: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
edf74b5
vie.,  5 de may. de 2023 12:35:37: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
b40b866
vie.,  5 de may. de 2023 12:38:01: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
c400674
vie.,  5 de may. de 2023 12:42:02: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:68:13: error: unused variable 'A' [-Werror=unused-variable]
         int A[10] = {0};
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
ded612d
vie.,  5 de may. de 2023 12:42:21: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
3ea378b
vie.,  5 de may. de 2023 12:44:14: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
59b68a2
vie.,  5 de may. de 2023 12:52:17: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  7|1
total_score: 55/70
6f80dcb
vie.,  5 de may. de 2023 12:59:48: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  7|1
total_score: 55/70
4f46fe6
vie.,  5 de may. de 2023 13:02:03: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
07095a7
